# gil-experiments

./: .gitignore  bedrock_batch_prediction.py  openai_batch_execution.py  pyproject.toml  vertexai_batch_prediction.py
batch_executors/: batch_executor_base.py  bedrock_batch_executor.py  openai_batch_executor.py  vertexai_batch_executor.py
flanner_trainer/: extract_data_for_last_name.py  flan_t5_fine_tuning.py  model_config.py  model_evaluation.ipynb  model_to_ctranslate.ipynb  tokenize_dataset.py  tokenizer_config.py  utils.py
flanner_trainer/ds_commons/: consts.py  flanner_utils.py
llm_client_usage/: last_name_labels.py  sample_usage.py
qwak_utils/: inference.py
utils/: decorators.py  funcs.py
